== master

* Add #fast_bootstrap for bootstrapping large numbers of records
* Don't require an id during bootstrap
* Allow bootstrapping to be easily added to non-enumerations
* Cache results for #exists? / #calculate
* Add the ability to skip the internal cache via Model#uncached
* Add Model#find_all_by_enumerator
* Don't internally rely on Model#[] being available since it may conflict with other plugins
* Enable caching by default for all enumerations
* Allow caching to be turned off on an application-wide basis
* Allow cache store to be configurable
* Automatically trigger in-memory caching of the enumeration's table when bootstrapping
* Add #bootstrap for automatically synchronizing the records in an enumeration's table
* Improve serialization performance
* No longer use tableless models
* Re-brand under the enumerate_by name

== 0.3.0 / 2008-12-14

* Remove the PluginAWeek namespace

== 0.2.6 / 2008-11-29

* Fix enumeration collections not being able to convert to JSON
* Add support for multiple enumeration values in finder conditions, e.g. Car.find_all_by_color(%w(red blue))

== 0.2.5 / 2008-10-26

* Fix non-ActiveRecord associations (e.g. ActiveResource) failing
* Fix reloading of associations not working
* Raise an exception if equality is performed with an invalid enumeration identifier
* Change how the base module is included to prevent namespacing conflicts

== 0.2.4 / 2008-08-31

* Add support for serialization in JSON/XML

== 0.2.3 / 2008-06-29

* Fix named scope for enumerations that belong_to other enumerations

== 0.2.2 / 2008-06-23

* Remove log files from gems

== 0.2.1 / 2008-06-22

* Improve documentation

== 0.2.0 / 2008-06-22

* Improve performance by disabling unnecessary ActiveRecord hooks including callbacks, dirty attributes, timestamps, and transactions (important for enumerations with large sets of values)
* Don't let #create silently fail
* Remove ability to reset the cache